Fixes weather sprite not aligned properly

--- a/src/scss/_weather.scss
+++ b/src/scss/_weather.scss
@@ -363,7 +363,7 @@
     background-position: -333px -23px !important;
   }
   .rain {
-    background-position: -14px -90px !important;
+    background-position: -10px -90px !important;
   }
   .partly-cloudy-day {
     background-position: -91px -90px !important;
